# test-gh-action

./: .pre-commit-config.yaml  setup.cfg
.github/workflows/: deploy.yaml  pre_commit_autoupdate.yaml  test.yaml
beamer/: gh_action.tex
src/gh_action/: __init__.py
tests/: test_gh_demo.py
