[metadata]
name = gh_action
author = Nikhil Dhandre
author-email = ndhandre@redhat.com
maintainer = Nikhil Dhandre
maintainer_email = ndhandre@redhat.com
license_file = LICENSE
description = Learn GH-Action
keywords =
    gh
    action
url = https://github.com/pi-digitronik/test-gh-action
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
    =src
packages = find:
zip_safe = False
setup_requires = setuptools_scm
include_package_data = True

[options.packages.find]
where = src

[flake8]
ignore = E128,E811,W503,E203
max-line-length = 100
